refactor: Image 컴포넌트를 적용해 이미지 파일 최적화
모든 img 태그 Nextjs Image 로 변경

--- a/src/components-common/ui-navigation-bar/NavigationBar.module.scss
+++ b/src/components-common/ui-navigation-bar/NavigationBar.module.scss
@@ -33,10 +33,13 @@
 }
 
 .logo {
+  position: relative;
   height: 1.6rem;
+  width: 8.867rem;
 
   @include tablet {
     height: 2.4rem;
+    width: 13.3rem;
   }
 }
 
