--- a/src/components-shared/ui-folder-info/FolderInfo.module.scss
+++ b/src/components-shared/ui-folder-info/FolderInfo.module.scss
@@ -1,6 +1,7 @@
 @import "@/styles/global.scss";
 
 .container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
